@@ -1,3 +1,7 @@
+2023-11-11  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>
+
+	* texmfmp.c: Order of lines was incorrect (windows only).
+
 2023-08-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* texmfmp.c: Avoid compiler warning on MinGW.
